# short-gainers-agent

./: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  run_scheduled.bat  setup_scheduler.ps1  watchlist.txt
config/: __init__.py  settings.py
examples/: analyze_single.py  batch_analysis.py  batch_analysis_example.py
src/: __init__.py  batch_cli.py  batch_processor.py  dashboard_generator.py  deploy.py  main.py  notifications.py  pipeline.py  web_server.py
src/clients/: __init__.py  alpha_vantage.py  claude_client.py  nasdaq_client.py  yfinance_client.py
src/filters/: __init__.py  prefilter.py
src/ingest/: __init__.py  cache.py  fundamentals.py  gainers.py  news.py  price.py  ticker_sources.py
src/models/: __init__.py  candidate.py  output.py  ticker.py
src/ranking/: __init__.py  ranker.py
src/sentiment/: __init__.py  catalyst.py
src/short_gainers_agent/: __init__.py  agent.py  cli.py  config.py
src/short_gainers_agent/analysis/: __init__.py  risk.py  scoring.py
src/technicals/: __init__.py  indicators.py  scoring.py
tests/: conftest.py  test_alpha_vantage.py  test_ingest.py  test_integration.py  test_pipeline.py  test_prefilter.py  test_ranking_output.py  test_scoring.py  test_sentiment.py  test_technicals.py
tests/fixtures/: sample_gainers.json
