[project]
name = "short-gainers-agent"
version = "0.2.0"
description = "Trading research agent for identifying short candidates among NASDAQ top gainers"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "duckdb>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.40",
    "anthropic>=0.18.0",
]

[project.scripts]
short-gainers = "src.main:main"
short-gainers-batch = "src.batch_cli:main"
short-gainers-web = "src.web_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
